@@ -45,15 +45,15 @@ except ImportError:
 #  - SHA1 sum of package
 archives = [
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-14516-p1.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-14622.tar.gz',
      'xapian-core.tgz',
-     '3db415780e8ee3e1a71461c521f2f2e191baaf00',
+     '2e8950bc9c103e34c3c56d925a55a8fc2789afb1',
      'xapian-core',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-14516.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-14622.tar.gz',
      'xapian-bindings.tgz',
-     'fcbae1cc00dfff1c4d953bf483c881a6fae14ebc',
+     '7a31fc93d5b6ea4d4e134e58a0a778c3b28e918e',
      'xapian-bindings',
     ),
     ('Xapian win32 build system',
