@@ -17,11 +17,11 @@
 #
 #  $xappylibdir: a checkout of xappy/trunk.
 
-rev="1.1.3"
-trunk_rev="13959"
-matchspy_branchpoint="13956"
+rev="1.2.0"
+trunk_rev="14622"
+matchspy_branchpoint="14533"
 clustering_branchpoint="13956"
-geospatial_branchpoint="13808"
+geospatial_branchpoint="14620"
 coloursim_branchpoint="13348"
 
 if [ -e "$HOME/xappy" ]; then
